Fix some styling issues on Firefox

--- a/sass/index.scss
+++ b/sass/index.scss
@@ -46,7 +46,7 @@ A {
 
 #map-container {
   position: absolute;
-  box-sizing: border-box;
+  @include box-sizing(border-box);
   width: 100%;
   height: 100%;
   padding-right: 375px;
@@ -87,7 +87,7 @@ A {
     .label-container {
       @include animation(slide-up-down 2.0s ease-in-out 0s infinite alternate);
 
-      padding: 6px 20px 8px;
+      padding: 6px 20px 6px;
       margin-top: 20px;
 
       background-color: $almostWhite;
@@ -95,10 +95,10 @@ A {
       border-radius: 50px;
 
       .label {
-        padding-left: 1px;
+        padding: 2px 0 2px 1px;
+        font-size: 9px;
 
-        text-transform: lowercase;
-        font-variant: small-caps;
+        text-transform: uppercase;
       }
 
       .venue-name {
@@ -131,7 +131,7 @@ A {
 
 #right-nav {
   position: absolute;
-  box-sizing: border-box;
+  @include box-sizing(border-box);
   top: 0;
   right: 0;
   width: 375px;
